New base class. News checking.

--- a/language/English/cleantalk.lng
+++ b/language/English/cleantalk.lng
@@ -33,8 +33,9 @@ $ct_lang = array_merge($lang, array (
 'ct_enter_code'		=> "Ener code",
 'ct_cant_connect_subject'		=>	"Unable to connect to server CleanTalk.ru",
 'ct_please_enter_code'	=> 'Please, enter the code',
-'ct_enable_comments'	=> 'Checking comments',
-'ct_enable_feedback'	=> 'Checking feedback emails',
+'ct_enable_comments'	=> 'Check comments',
+'ct_enable_feedback'	=> 'Check feedback emails',
+'ct_enable_news'	=> 'Check news',
 'ct_module_settings'	=> 'Module settings',
 'ct_module_logs_about'	=> "Logs of module CleanTalk. Spam protect, for the last 30 days",
 'ct_partner_id'		=>	"Partner ID<br><a style=\"text-decoration:underline;\" target=\"_blank\" href=\"http://CleanTalk.org/partners\">Get my ID &gt;&gt;&gt;</a>",
