--- a/language/English/cleantalk.lng
+++ b/language/English/cleantalk.lng
@@ -3,7 +3,7 @@
 $ct_lang = array_merge($lang, array (
 'ct_module_name'		=>	"CleanTalk. Spam protect",
 'ct_module_release'		=>	"3.03",
-'ct_not_installed'		=>	"Module <b>CleanTalk</b> not installed. Please email to welcome@cleantalk.ru.",
+'ct_not_installed'		=>	"Module <b>CleanTalk</b> not installed. Please email to welcome@cleantalk.org.",
 'ct_installed'		=>	"Now you can configure the module <b>CleanTalk</b>. Thank you for choosing us.",
 'ct_install_button'		=>	"Install",
 'ct_install_next'		=>	"Next",
@@ -27,20 +27,20 @@ $ct_lang = array_merge($lang, array (
 'ct_server_url'		=>	"CleanTalk server URL",
 'ct_language'		=>	"System messages language<br><em style=\"color: grey;\">In the selected language module will give explanatory information to visitors and moderators</em>",
 'ct_save_button'		=>	"Save",
-'ct_email_cant_connect_subject'		=>	"Problems with the server CleanTalk.ru",
-'ct_email_cant_connect_text'		=>	"Dear administrator, \n\n alert you experience any problems with the server CleanTalk.ru. \n\n *** Can't connect to CleanTalk.ru ***",
+'ct_email_cant_connect_subject'		=>	"Problems with the server CleanTalk.org",
+'ct_email_cant_connect_text'		=>	"Dear administrator, \n\n alert you experience any problems with the server CleanTalk.org. \n\n *** Can't connect to CleanTalk.org ***",
 'ct_reset_success'		=>	"Module <b>CleanTalk. Spam protect</b> reinstalled. Thank you for choosing us!",
 'ct_enter_code'		=> "Ener code",
-'ct_cant_connect_subject'		=>	"Unable to connect to server CleanTalk.ru",
+'ct_cant_connect_subject'		=>	"Unable to connect to server CleanTalk.org",
 'ct_please_enter_code'	=> 'Please, enter the code',
 'ct_enable_comments'	=> 'Check comments',
 'ct_enable_feedback'	=> 'Check feedback emails',
 'ct_enable_news'	=> 'Check news',
 'ct_module_settings'	=> 'Module settings',
 'ct_module_logs_about'	=> "Logs of module CleanTalk. Spam protect, for the last 30 days",
-'ct_partner_id'		=>	"Partner ID<br><a style=\"text-decoration:underline;\" target=\"_blank\" href=\"http://CleanTalk.org/partners\">Get my ID &gt;&gt;&gt;</a>",
+'ct_partner_id'		=>	"Partner ID<br><a style=\"text-decoration:underline;\" target=\"_blank\" href=\"https://CleanTalk.org/partners\">Get my ID &gt;&gt;&gt;</a>",
 'ct_show_partner_link' => "Show partner link",
-'ct_partner_link' => '<a style="font-size: 12px; margin-left: 10px;" href="http://CleanTalk.org/dle?partner_id=%s" title="DLE module protection against spam." target="__blank">DLE module protection against spam</a>',
+'ct_partner_link' => '<a style="font-size: 12px; margin-left: 10px;" href="https://CleanTalk.org/dle?partner_id=%s" title="DLE module protection against spam." target="__blank">DLE module protection against spam</a>',
 'ct_enable_mod'	=> 'Module status',
 'ct_update_success' => 'Module <b>CleanTalk. Spam protect</b> updated. Thank you for use our services.',
 'ct_state'		=>	"State",
