--- a/language/Russian/cleantalk.lng
+++ b/language/Russian/cleantalk.lng
@@ -4,7 +4,7 @@ $ct_lang = array (
 
 'ct_module_name'		=>	"CleanTalk. Spam protection",
 'ct_module_release'		=>	"3.03",
-'ct_not_installed'		=>	"Ошибка установки модуля <b>CleanTalk</b>. Пожалуйста обратитесь за технической поддержкой на форум <a href=\"http://cleantalk.ru/forum\">cleantalk.ru</a>!",
+'ct_not_installed'		=>	"Ошибка установки модуля <b>CleanTalk</b>. Пожалуйста обратитесь за технической поддержкой на форум <a href=\"https://cleantalk.org/forum\">cleantalk.org</a>!",
 'ct_installed'		=>	"Модуль <b>CleanTalk</b> успешно установлен!",
 'ct_install_patches'		=>	"Модифкация файлов DLE",
 'ct_setup_db'		=>	"Модификация базы данных DLE.",
@@ -21,28 +21,28 @@ $ct_lang = array (
 'ct_off'		=>	"Отключено",
 	'ct_groups'		=>	"Группы пользователей<br><em style=\"color: grey;\">На указанные группы будет распространяться проверка комментариев на спам, офтопы и содержание стоп-слов.</em>",
 'ct_groups_all'		=>	"- Все -",
-	'ct_stop_words'		=>	"Проверка по стоп-словам<br><em style=\"color: grey;\">Описание опции смотрите на <a href=\"http://CleanTalk.ru/about#stoplist\" target=\"_blank\">сайте разработчика</a>.</em>",
+	'ct_stop_words'		=>	"Проверка по стоп-словам<br><em style=\"color: grey;\">Описание опции смотрите на <a href=\"https://CleanTalk.org/about#stoplist\" target=\"_blank\">сайте разработчика</a>.</em>",
 'ct_links'		=>	"Разрешать ссылки",
 'ct_key1'		=>	"Ключ доступа",
 'ct_key2'		=>	"Кликните, чтобы получить ключ",
 'ct_server_url'		=>	"URL сервера",
 'ct_language'		=>	"Язык системных сообщений<br><em style=\"color: grey;\">На выбранном языке модуль будет выдавать поясняющую информацию посетителям  и модераторам сайта.</em>",
 'ct_save_button'		=>	"Сохранить",
-'ct_email_cant_connect_subject'		=>	"Невозможно подключиться к серверу CleanTalk.ru",
-'ct_email_cant_connect_text'		=>	"Уважаемый администратор,\n\nуведомляем вас о возникших проблемах с сервером CleanTalk.ru.\n\n*** Can't connect to CleanTalk.ru ***",
+'ct_email_cant_connect_subject'		=>	"Невозможно подключиться к серверу CleanTalk.org",
+'ct_email_cant_connect_text'		=>	"Уважаемый администратор,\n\nуведомляем вас о возникших проблемах с сервером CleanTalk.org.\n\n*** Can't connect to CleanTalk.org ***",
 'ct_reset_success'		=>	"Модуль <b>CleanTalk. Spam protection</b> переустановлен. Спасибо, что выбрали нас!",
 'ct_enter_code'		=> "Введите код",
-'ct_cant_connect_subject'		=>	"Невозможно подключиться к серверу CleanTalk.ru",
+'ct_cant_connect_subject'		=>	"Невозможно подключиться к серверу CleanTalk.org",
 'ct_please_enter_code'	=> 'Пожалуйста введите код',
 'ct_enable_comments'	=> 'Проверка комментариев',
 'ct_enable_feedback'	=> 'Проверка сообщений формы обратной связи',
 'ct_enable_news'	=> 'Проверка новостей',
 'ct_module_settings'	=> 'Настройки модуля',
 'ct_module_logs_about'		=>	"Список всех действий, выполненных модулем CleanTalk. Spam protection, за последние 30 дней.",
-'ct_partner_id'		=>	"Партнерский ID<br><a style=\"text-decoration:underline;\" target=\"_blank\" href=\"http://CleanTalk.ru/partners\">Получить мой ID &gt;&gt;&gt;</a>",
+'ct_partner_id'		=>	"Партнерский ID<br><a style=\"text-decoration:underline;\" target=\"_blank\" href=\"https://CleanTalk.org/partners\">Получить мой ID &gt;&gt;&gt;</a>",
 	'ct_partner_id_example'				=> "Пример: 321911",
 'ct_show_partner_link' => "Показывать партнерскую ссылку",
-'ct_partner_link' => '<a style="font-size: 12px; margin-left: 10px;" href="http://CleanTalk.ru/dle?partner_id=%s" title="Модуль защиты DLE от спама." target="__blank">Модуль защиты DLE от спама</a>',
+'ct_partner_link' => '<a style="font-size: 12px; margin-left: 10px;" href="https://CleanTalk.org/dle?partner_id=%s" title="Модуль защиты DLE от спама." target="__blank">Модуль защиты DLE от спама</a>',
 'ct_enable_mod'	=> 'Статус модуля',
 'ct_update_success' => 'Модуль <b>CleanTalk. Spam protection</b> обновлен. Спасибо, что пользуетесь нашими услугами.',
 'ct_control_panel'	=>	"Ваша панель управления в CleanTalk",
